# Video-Web-Server

./: README.txt
servidorpag/: Cargo.toml
servidorpag/html/: files.html  hello.html  notfound.html
servidorpag/src/: main.rs
