[package]
name = "servidorpag"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
chrono-tz = "0.8.2"
hyper = "0.14.26"
mime = "0.3.17"
mime_guess = "2.0.4"
percent-encoding = "2.2.0"
pnet = "0.33.0"
reqwest = "0.11.17"
sys-info = "0.9.1"
tera = "1.19.0"
whoami = "1.4.0"
